cilium-with-gateway-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  labels:
    app: httpbin
spec:
  type: ClusterIP
  selector:
    app: httpbin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
